force-app/main/default/objects/Account/fields/Interest_Paid_A__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid_A__c</fullName>
    <label>Interest Paid</label>
    <summarizedField>Loan__c.Repay_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Loan__c.State__c</field>
        <operation>equals</operation>
        <value>Paid On Time, Paid Late</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Loan__c.Action__c</field>
        <operation>equals</operation>
        <value>Interest</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan__c.Loan_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>