force-app/main/default/objects/Account/fields/Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Date__c</fullName>
    <defaultValue>(TODAY())</defaultValue>
    <label>Loan Date</label>
    <type>Date</type>
</CustomField>