force-app/main/default/objects/Account/listViews/Active_Loan.listView-meta.xml
<ListView>
    <fullName>Active_Loan</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>SLAExpirationDate__c</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Active Loan</label>
</ListView>