force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Balance_Loan__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>SLAExpirationDate__c</columns>
    <columns>Interest_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>