force-app/main/default/objects/Account/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>SLAExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Closed Late,Closed Early,Closed On Time,Closed</value>
    </filters>
    <label>Closed</label>
</ListView>