force-app/main/default/objects/Account/listViews/Due.listView-meta.xml
<ListView>
    <fullName>Due</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>SLAExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Due,Overdue</value>
    </filters>
    <label>Due</label>
</ListView>