force-app/main/default/objects/Account/listViews/Sangam_Accounts.listView-meta.xml
<ListView>
    <fullName>Sangam_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>Sangam Accounts</label>
</ListView>